# syslog-mcp

./: .app.json  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  SETUP.md  config.rs  config.toml  db.rs  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  gemini-extension.json  lefthook.yml  main.py  plugin.json  pyproject.toml  run.sh  server.json  syslog-ng.conf  syslog.subdomain.conf
.agents/plugins/: marketplace.json
.beads/: metadata.json
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
.github/workflows/: ci.yml  codex-plugin-scanner.yml  docker-publish.yml  publish-crates.yml
.lavra/config/: codebase-profile.md  project-setup.md
.lavra/memory/: knowledge-db.sh  knowledge.jsonl  recall.sh
.omc/: project-memory.json
.omc/sessions/: 691fc4f1-e10d-469a-a4a0-d1a51fe150a2.json  ea69d897-48cc-4028-a8a7-e7c825067ce9.json
.omc/state/: agent-replay-ac9e2139-e66b-46a4-87bd-50f8628761f8.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-30T04-02-49-560Z.json  checkpoint-2026-03-30T05-58-03-412Z.json  checkpoint-2026-03-30T13-44-26-402Z.json  checkpoint-2026-03-30T14-11-16-934Z.json
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: docker-hosts.example.toml  http_client_config.json  mcporter.json
docs/: CHECKLIST.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md  syslog.subdomain.conf
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/plans/: 2026-03-29-unifi-cef-hostname-fix.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/runbooks/: deploy.md
docs/sessions/: 2026-03-27-lavra-project-setup.md  2026-03-27-repo-init-and-restructure.md  2026-03-28-build-run-proxy-debug.md  2026-03-28-correlate-events-debug-and-fix.md  2026-03-28-post-reboot-cleanup-and-review.md  2026-03-28-pr-review-comment-resolution.md  2026-03-28-syslog-host-onboarding-and-systemd-cleanup.md  2026-03-30-bulk-bead-resolution-v017.md  2026-03-30-claude-md-audit.md  2026-03-30-flatten-env-vars.md  2026-03-30-lavra-work-review-p1-fixes.md
docs/stack/: ARCH.md  PRE-REQS.md  TECH.md
docs/superpowers/specs/: 2026-03-30-storage-budget-guardrail-design.md
docs/upstream/: CLAUDE.md
hooks/: hooks.json
hooks/scripts/: ensure-ignore-files.sh  fix-env-perms.sh  sync-env.sh
scripts/: backup.sh  lint-plugin.sh  reset-db.sh  run_tests.py  smoke-test.sh
skills/syslog/: SKILL.md
src/: api.rs  api_tests.rs  app.rs  app_tests.rs  config.rs  config_tests.rs  db.rs  db_tests.rs  docker_ingest.rs  ingest.rs  lib.rs  main.rs  main_tests.rs  mcp.rs  mcp_tests.rs  runtime.rs  syslog.rs  syslog_tests.rs
src/app/: correlate.rs  correlate_tests.rs  error.rs  error_tests.rs  mod.rs  mod_tests.rs  models.rs  models_tests.rs  service.rs  service_tests.rs  tests.rs  time.rs  time_tests.rs
src/db/: ingest.rs  ingest_tests.rs  maintenance.rs  maintenance_tests.rs  models.rs  models_tests.rs  pool.rs  pool_tests.rs  queries.rs  queries_tests.rs
src/docker_ingest/: checkpoint.rs  checkpoint_tests.rs  client.rs  models.rs  parser.rs  parser_tests.rs  supervisor.rs
src/mcp/: protocol.rs  protocol_tests.rs  rmcp_server.rs  rmcp_server_tests.rs  routes.rs  routes_tests.rs  schemas.rs  schemas_tests.rs  tools.rs  tools_tests.rs
src/syslog/: listener.rs  listener_tests.rs  parser.rs  parser_tests.rs  writer.rs  writer_tests.rs
src/syslog_mcp/: exceptions.py  http_server.py  server.py
src/syslog_mcp/config/: script_templates.py
src/syslog_mcp/models/: __init__.py  device.py  log_entry.py  query.py  response.py  serialization.py  validators.py
src/syslog_mcp/prompts/: __init__.py  forensics.py  security_analysis.py  system_administration.py
src/syslog_mcp/services/: __init__.py  alert_monitor.py  elasticsearch_client.py  gotify_client.py
src/syslog_mcp/tools/: __init__.py  device_analysis.py  search_logs.py  summary_generators.py
src/syslog_mcp/utils/: __init__.py  error_handling.py
syslog_mcp/: __init__.py  __main__.py  exceptions.py  http_server.py  main.py  server.py
syslog_mcp/config/: script_templates.py
syslog_mcp/models/: __init__.py  device.py  log_entry.py  query.py  response.py  serialization.py  validators.py
syslog_mcp/prompts/: forensics.py  security_analysis.py  system_administration.py
syslog_mcp/services/: alert_monitor.py  elasticsearch_client.py  gotify_client.py
syslog_mcp/tools/: __init__.py  device_analysis.py  search_logs.py
syslog_mcp/utils/: error_handling.py  logging.py
tests/: README.md  TEST_COVERAGE.md  __init__.py  conftest.py  factories.py  rmcp_compat.rs  stdio_mcp.rs  test_error_handling.py  test_live.sh  test_server.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_elasticsearch_integration.py
tests/mcporter/: test-tools.sh
tests/unit/: __init__.py  test_analysis_modules.py  test_connection_pooling.py  test_device_analysis_tools.py  test_device_model.py  test_elasticsearch_client.py  test_elasticsearch_client_simple.py  test_error_handling.py  test_formatters.py  test_log_entry_model.py  test_logging.py  test_query_models.py  test_response_models.py  test_retry_resilience.py  test_search_logs.py  test_serialization.py  test_validators.py
(+44 files in other folders)
