[package]
name = "syslog-mcp"
version = "0.4.1"
edition = "2021"
rust-version = "1.86"
description = "Syslog receiver + MCP server for homelab log intelligence"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Syslog parsing
syslog_loose = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1"
subtle = "2"
rustix = { version = "0.38", features = ["fs"] }

# SSE support
tokio-stream = "0.1"
futures-core = "0.3"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
